Make little fixes

--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -58,7 +58,7 @@
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/buttonAddtem"
+                android:id="@+id/buttonAddItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/button_add_item"
