--- a/app/src/main/res/drawable/button_blue.xml
+++ b/app/src/main/res/drawable/button_blue.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
+    <item android:state_pressed="true">
         <shape>
-            <solid
-                android:color="@color/colorAccent" />
-            <corners
-                android:radius="8dp" />
+            <solid android:color="@color/colorAccent" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <stroke
-                android:width="2dp"
-                android:color="@color/colorAccent" />
-            <corners
-                android:radius="8dp" />
+            <stroke android:width="2dp" android:color="@color/colorAccent" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector>
