--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -23,37 +23,37 @@
             android:background="?attr/colorPrimary"
             android:elevation="0dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <ListView
             android:id="@+id/listViewItems"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@color/colorWhite"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:dividerHeight="0.5dp" >
-        </ListView>
+            android:layout_weight="1"
+            android:divider="@color/colorWhite"
+            android:dividerHeight="0.5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/editTextItem"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:autofillHints=""
+                android:hint="@string/hint_new_item"
                 android:inputType="text"
                 android:text=""
-                android:hint="@string/hint_new_item"
                 android:textColor="@color/colorWhite"
                 android:textSize="20sp" />
 
@@ -61,9 +61,9 @@
                 android:id="@+id/buttonAddItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/button_blue"
                 android:text="@string/button_add_item"
                 android:textColor="@color/colorWhite"
-                android:background="@drawable/button_blue"
                 android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
